@@ -48,14 +48,13 @@ def _is_sequence_with_quantity_elements(obj):
 
     Returns
     -------
-    bool
+    True if obj is a sequence and at least one element is a Quantity; False otherwise
     """
     return (
         iterable(obj)
         and sized(obj)
         and not isinstance(obj, str)
-        and len(obj) > 0
-        and all(_is_quantity(item) for item in obj)
+        and any(_is_quantity(item) for item in obj)
     )
 
 
@@ -67,42 +66,43 @@ def _get_first_input_units(args, kwargs=None):
         if _is_quantity(arg):
             return arg.units
         elif _is_sequence_with_quantity_elements(arg):
-            return arg[0].units
+            return next(arg_i.units for arg_i in arg if _is_quantity(arg_i))
+    raise TypeError("Expected at least one Quantity; found none")
 
 
 def convert_arg(arg, pre_calc_units):
     """Convert quantities and sequences of quantities to pre_calc_units and strip units.
 
-    Helper function for convert_to_consistent_units. pre_calc_units must be given as a pint
-    Unit or None.
-
+    Helper function for convert_to_consistent_units. pre_calc_units must be given as a
+    pint Unit or None.
     """
     if pre_calc_units is not None:
         if _is_quantity(arg):
             return arg.m_as(pre_calc_units)
         elif _is_sequence_with_quantity_elements(arg):
-            return [item.m_as(pre_calc_units) for item in arg]
+            return [convert_arg(item, pre_calc_units) for item in arg]
         elif arg is not None:
             if pre_calc_units.dimensionless:
                 return pre_calc_units._REGISTRY.Quantity(arg).m_as(pre_calc_units)
+            elif not _is_quantity(arg) and zero_or_nan(arg, True):
+                return arg
             else:
                 raise DimensionalityError("dimensionless", pre_calc_units)
-    else:
-        if _is_quantity(arg):
-            return arg.m
-        elif _is_sequence_with_quantity_elements(arg):
-            return [item.m for item in arg]
+    elif _is_quantity(arg):
+        return arg.m
+    elif _is_sequence_with_quantity_elements(arg):
+        return [convert_arg(item, pre_calc_units) for item in arg]
     return arg
 
 
 def convert_to_consistent_units(*args, pre_calc_units=None, **kwargs):
     """Prepare args and kwargs for wrapping by unit conversion and stripping.
 
-    If pre_calc_units is not None, takes the args and kwargs for a NumPy function and converts
-    any Quantity or Sequence of Quantities into the units of the first Quantiy/Sequence of
-    Quantities and returns the magnitudes. Other args/kwargs are treated as dimensionless
-    Quantities. If pre_calc_units is None, units are simply stripped.
-
+    If pre_calc_units is not None, takes the args and kwargs for a NumPy function and
+    converts any Quantity or Sequence of Quantities into the units of the first
+    Quantity/Sequence of Quantities and returns the magnitudes. Other args/kwargs are
+    treated as dimensionless Quantities. If pre_calc_units is None, units are simply
+    stripped.
     """
     return (
         tuple(convert_arg(arg, pre_calc_units=pre_calc_units) for arg in args),
@@ -484,29 +484,15 @@ def _power(x1, x2):
         return x2.__rpow__(x1)
 
 
-def _add_subtract_handle_non_quantity_zero(x1, x2):
-    # As in #121, #122, and #1051, if a value is 0 or NaN (but not a Quantity) do the
-    # operation without checking units. We do the calculation instead of just returning
-    # the same value to enforce any shape checking and type casting due to the
-    # operation.
-    if zero_or_nan(x1, True):
-        (x2,), output_wrap = unwrap_and_wrap_consistent_units(x2)
-    elif zero_or_nan(x2, True):
-        (x1,), output_wrap = unwrap_and_wrap_consistent_units(x1)
-    else:
-        (x1, x2), output_wrap = unwrap_and_wrap_consistent_units(x1, x2)
-    return x1, x2, output_wrap
-
-
 @implements("add", "ufunc")
 def _add(x1, x2, *args, **kwargs):
-    x1, x2, output_wrap = _add_subtract_handle_non_quantity_zero(x1, x2)
+    (x1, x2), output_wrap = unwrap_and_wrap_consistent_units(x1, x2)
     return output_wrap(np.add(x1, x2, *args, **kwargs))
 
 
 @implements("subtract", "ufunc")
 def _subtract(x1, x2, *args, **kwargs):
-    x1, x2, output_wrap = _add_subtract_handle_non_quantity_zero(x1, x2)
+    (x1, x2), output_wrap = unwrap_and_wrap_consistent_units(x1, x2)
     return output_wrap(np.subtract(x1, x2, *args, **kwargs))
 
 
@@ -550,26 +536,7 @@ def _interp(x, xp, fp, left=None, right=None, period=None):
 
 @implements("where", "function")
 def _where(condition, *args):
-    if (
-        len(args) == 2
-        and not _is_quantity(args[1])
-        and not iterable(args[1])
-        and (args[1] == 0 or np.isnan(args[1]))
-    ):
-        # Special case for y being bare zero or nan
-        (x,), output_wrap = unwrap_and_wrap_consistent_units(args[0])
-        args = x, args[1]
-    elif (
-        len(args) == 2
-        and not _is_quantity(args[0])
-        and not iterable(args[0])
-        and (args[0] == 0 or np.isnan(args[0]))
-    ):
-        # Special case for x being bare zero or nan
-        (y,), output_wrap = unwrap_and_wrap_consistent_units(args[1])
-        args = args[0], y
-    else:
-        args, output_wrap = unwrap_and_wrap_consistent_units(*args)
+    args, output_wrap = unwrap_and_wrap_consistent_units(*args)
     return output_wrap(np.where(condition, *args))
 
 
@@ -631,6 +598,8 @@ def _isin(element, test_elements, assume_unique=False, invert=False):
     elif _is_sequence_with_quantity_elements(test_elements):
         compatible_test_elements = []
         for test_element in test_elements:
+            if not _is_quantity(test_element):
+                pass
             try:
                 compatible_test_elements.append(test_element.m_as(element.units))
             except DimensionalityError:
