@@ -55,7 +55,8 @@ class TestNumPyFuncUtils(TestNumpyMethods):
             )
         )
         self.assertTrue(_is_sequence_with_quantity_elements(np.arange(4) * self.ureg.m))
-        self.assertFalse(_is_sequence_with_quantity_elements((self.Q_(0), True)))
+        self.assertTrue(_is_sequence_with_quantity_elements((self.Q_(0), 0)))
+        self.assertTrue(_is_sequence_with_quantity_elements((0, self.Q_(0))))
         self.assertFalse(_is_sequence_with_quantity_elements([1, 3, 5]))
         self.assertFalse(_is_sequence_with_quantity_elements(9 * self.ureg.m))
         self.assertFalse(_is_sequence_with_quantity_elements(np.arange(4)))
