@@ -12,8 +12,12 @@ Pint Changelog
   end_values (Issue #1026)
 - Reinstated support for pickle protocol 0 and 1, which is required by pytables
   (Issue #1036, Thanks Guido Imperiale)
-- NaN is now treated the same as zero in addition, equality, and disequality
-  (Issue #1051, Thanks Guido Imperiale)
+- Bare zeros and NaNs (not wrapped by Quantity) are now gracefully accepted by all numpy
+  operations; e.g. np.stack([Quantity([1, 2], "m"), [0, np.nan]) is now valid, whereas
+  np.stack([Quantity([1, 2], "m"), [3, 4]) will continue raising DimensionalityError.
+  (Issue #1050, Thanks Guido Imperiale)
+- NaN is now treated the same as zero in addition, subtraction, equality, and
+  disequality (Issue #1051, Thanks Guido Imperiale)
 
 
 0.11 (2020-02-19)
